@@ -104,18 +104,18 @@ sub process($$$) {
 	    }
 	}
 
-	# Fire the listeners.
-
+	# Indicate to the topic listeners that the topic has changed.
+	Codestriker::TopicListeners::Manager::topic_changed($email,
+							    $topic_orig,
+							    $topic);
     }
-
-    # Indicate to the topic listeners that the topic has changed.
-    Codestriker::TopicListeners::Manager::topic_changed($email, $topic_orig,
-							$topic);
 
     # Direct control to the appropriate action class, depending on the result
     # of the above operation, and what screens are enabled.
+    $feedback =~ s/\n/<BR>/g;
     $http_input->{feedback} = $feedback;
-    if ($rc == $Codestriker::INVALID_TOPIC || $topic_state eq "Delete") {
+    if ($feedback eq "" &&
+	($rc == $Codestriker::INVALID_TOPIC || $topic_state eq "Delete")) {
 	if ($Codestriker::allow_searchlist) {
 	    # Go to the topic list screen for just open topics.
 	    $http_input->{sstate} = "0";
